# net

./: .gitignore  CMakeLists.txt  README.md  _config.yml  main.cpp  matrix.nb  mnist.hpp  net.nb  net.py  neural_network.hpp  plot.nb  readme.txt  run.bat
include/: globals.h
include/entities/: full_connected_net.h  full_connected_trainer.h  trainer.h
include/io/: saver.h
include/manager/: interpreter.h  io.h  repo.h
include/repo/: database.h  mnist.h  photo.h  picture.h
include/test/: photo.h  test.h  test_globals.h  test_matrix.h  trainer.h
include/utils/: matrix.h  opencv.h
src/: main.cpp  mnist.cpp
test/: CMakeLists.txt  conf.txt  test.cpp  test_config.h  test_interpreter.h
